# event-formation-unit

./: CMakeLists.txt  Dockerfile  conanfile.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  SENVSerializer.cpp  SENVSerializer.h  TDCTSerializer.cpp  TDCTSerializer.h  ZmqInput.cpp  ZmqInput.h
src/common/test/: CMakeLists.txt  SENVSerializerTest.cpp  TDCTSerializerTest.cpp
src/modules/: CMakeLists.txt
src/modules/adc_readout/: AdcReadoutConstants.h  AdcTimeStamp.h
src/modules/ansto/: Ansto.cpp  AnstoBase.cpp  AnstoBase.h  CMakeLists.txt
src/modules/ansto/bnlp/: BnlpParser.cpp  BnlpParser.h  BnlpParserTest.cpp  CMakeLists.txt
src/modules/ansto/bnlpz/: BnlpzParser.cpp  BnlpzParser.h  BnlpzParserTest.cpp  CMakeLists.txt
src/modules/ansto/common/: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterTest.cpp  Clusterer.cpp  Clusterer.h  Config.cpp  Config.h  EventBinning.cpp  EventBinning.h  EventBinningTest.cpp  ParserFactory.cpp  ParserFactory.h  Readout.cpp  Readout.h  ReadoutTest.cpp
src/modules/ansto/configs/: bnlpad.json  mcpd8.json  pelican.json  quokka-udp-cls.json  quokka-udp.json  quokka.json  testsim.json
src/modules/ansto/generators/: CMakeLists.txt  GenMcpd8Test.cpp  bnlpz.cpp  bnlpz.h  igenbase.h  mcpd8.cpp  mcpd8.h  test_zmq.cpp  udpgen_ansto.cpp
src/modules/ansto/mcpd8/: CMakeLists.txt  DataParser.cpp  DataParser.h  DataParserTest.cpp
src/modules/multiblade/: MBCaenBase.cpp
src/modules/timestamp_extractor/: CMakeLists.txt  (+2 more)
src/udpgenpcap/: ReaderPcap.cpp  ReaderPcap.h  udpgen_pcap.cpp
system-tests/: docker-compose-ansto.yml
(+3 files in other folders)
